--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,3 +30,11 @@ th {
     border: 1px solid rgb(190, 190, 190);
     padding: 5px 10px;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
