--- a/templates/list.html
+++ b/templates/list.html
@@ -31,7 +31,8 @@
             <span style='font-size:15px;'>&#128077;</span>
         </a><a href="{{ url_for('vote_question_down', question_id=question['id']) }}">
             <span style='font-size:15px;'>&#128078;</span>
-        </a>{{ question['vote_number'] }}</td>
+
+        </a><br><br>{{ question['vote_number'] }}</td>
         <td>{{ question["title"] }}</td>
         <td>{{ question["message"] }}</td>
     </tr>
