answer comments in progress

--- a/templates/i_whaaaatd.html
+++ b/templates/i_whaaaatd.html
@@ -17,9 +17,9 @@
     <p>{{ answer }} <form method="POST"><input type="submit" name='btn' value="Delete answer"></form></p>
     {% endfor %}
     <form method="POST">
-        <strong><label>Your comment:</label></strong><br>
+        <strong><label>Your answer:</label></strong><br>
         <textarea rows="4" cols="50" required name="comment"></textarea><br>
-        <input type="submit" name='btn' value="Send comment"><br><br>
+        <input type="submit" name='btn' value="Send answer"><br><br>
         
     </form>
     <form method="POST"><input type="submit" name='btn' value="Edit">
