--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 <body>
+<form method="POST">
+    <input type="text" name="search_text">
+    <input type="submit" value="Search">
+</form>
     <h1>Questions</h1>
 <table>
     <thead>
