--- a/templates/question_id.html
+++ b/templates/question_id.html
@@ -8,7 +8,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<>
+<div class="wrapper">
+<span class="question-block">
     <strong><em>Question:</em></strong><br><br>
     <strong>{{ title }}</strong>
     {{ message }}
@@ -18,21 +19,33 @@
     {% for comment in comments_questions %}
     <p>{{ comment.message }}</p>
     {% endfor %}
-
+</span>
+<span class="answer-block">
     <strong><em>Answers:</em></strong><br>
 
     {% for answer in answers %}
-
+        <div class="q">
+        <div class="r">
         <p>{{ answer['message'] }} </p>
+        </div>
+
+
+        <div class="a">
+        <form action="{{ url_for('delete_answer', answer_id=answer['id']) }}" method="POST">
+            <input type="hidden" name="question_id" value={{ answer['question_id'] }}>
+            <input type="submit" name='btn' value="Delete answer"><a href="{{ url_for('add_answer_comment',
+                question_id= question_id, answer_id=answer['id'] ) }}">Add comment to this answer</a></form>
+        </div>
+
+        <div class="d">
         {% for comment in comments_answers %}
             {% if answer.id==comment.answer_id %}
                 <p style="margin-left: 20px">{{ comment.message }}</p>
             {% endif %}
         {% endfor %}
-        <form action="{{ url_for('delete_answer', answer_id=answer['id']) }}" method="POST">
-            <input type="hidden" name="question_id" value={{ answer['question_id'] }}>
-            <input type="submit" name='btn' value="Delete answer"><a href="{{ url_for('add_answer_comment',
-                question_id= question_id, answer_id=answer['id'] ) }}">Add comment to this answer</a></form>
+        </div>
+        </div>
+
 
     {% endfor %}
 
@@ -44,6 +57,8 @@
     </form>
     <form method="POST"><input type="submit" name='btn' value="Edit question">
         <input type="submit" name='btn' value="Delete question"></form>
+</span>
+</div>
 
 {#    <a href="{{  url_for('add_answer_comment',question_id= question_id) }}"> New Comment to answer</a> <br> <br>#}
 {#    <p><strong>Comments to this answer:</strong></p>#}
