működik megoldottam nélkületek megint megint

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block page_title %}Main page{% endblock %} - Application process</title>
+    <title>{% block page_title %}{% endblock %}Ask Mate</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
@@ -16,7 +16,9 @@
         {% block content %}{% endblock %}
     </section>
 </div>
+{% include 'footer.html' %}
 </body>
+
 </html>
 
 
