működik megoldottam nélkületek megint megint megint

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 body {
-    background-color: #aab0b1;
-    color: #650303;
+    background-color: #ffdd84;
+    color: #000000 ;
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
 }
 
 .content-wrapper {
@@ -14,16 +15,16 @@ tfoot {
 }
 
 tbody {
-    background-color: #a5b381;
+    background-color: lightblue;
 }
 
 table {
     border-collapse: collapse;
     border: 2px solid rgb(200, 200, 200);
     letter-spacing: 1px;
-    font-family: sans-serif;
     font-size: 1rem;
     color: #010110;
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif
 }
 td,
 th {
@@ -33,6 +34,29 @@ th {
 
 a:link {
     text-decoration: none;
+}
+
+.wrapper {
+    display: flex;
+}
+#header-title {
+    text-align: center;
+    font-size: 3rem;
+}
+.question-block {
+    flex: 1;
+    margin: 20px;
+    padding: 10px;
+    background-color: lightblue;
+}
+.answer-block {
+    flex: 1;
+    margin: 20px;
+    padding: 10px;
+    background-color: lightblue;
+}
+.buttons {
+    margin: 20px;
 }
 
 a:visited {
@@ -55,15 +79,3 @@ a:visited {
 }
 
 
-
-span.question-block {
-    display: inline-block;
-    width: 50%;
-}
-span.answer-block {
-    display: inline-block;
-    width: 50%;
-}
-.wrapper {
-    display: inline;
-}
