--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
 <body>
 <div class="content-wrapper">
     <header>
-        <h1 id="header-title"> Ask Mate Q&A </h1>
+        <h1 id="header-title"> <img src="static/kacsa.jpg" alt="2 ducks in sunglasses" height="200px"> </h1>
     </header>
     <section>
         <h2 class="title text-center">{{ self.page_title() }}</h2>
